<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DashBoardActivity"
    tools:showIn="@layout/activity_dash_board">


    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        tools:context=".DashBoardActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".RegisterFragment">

            <TextView
                android:id="@+id/tv_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/indigo_daisy"
                android:text="@string/enter_cust_detail"
                android:textAlignment="center"
                android:textSize="50sp" />

            <!--<TextView-->
            <!--android:id="@+id/tv_subtitle"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginLeft="25dp"-->
            <!--android:layout_marginBottom="50dp"-->
            <!--android:fontFamily="@font/roboto_regular"-->
            <!--android:text="@string/tag"-->
            <!--android:textSize="17sp" />-->

            <EditText
                android:id="@+id/et_customer_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/et_custom"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/e_customer_name"
                android:inputType="textPersonName"
                android:padding="15dp"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_cust_phone_no"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/et_custom"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/e_phone_no"
                android:inputType="phone"
                android:maxLength="10"
                android:padding="15dp"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_cust_location"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/et_custom"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/e_customer_location"
                android:inputType="text"
                android:maxLength="10"
                android:padding="15dp"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_cust_requirement"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/et_custom"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/e_customer_requirement"
                android:inputType="text"
                android:padding="15dp"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_cust_budget"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/et_custom"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/e_customer_budget"
                android:inputType="text"
                android:padding="15dp"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/follow_up_date"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/et_custom"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/e_customer_folow_up_date"
                android:inputType="datetime"
                android:padding="15dp"
                android:textSize="15sp" />

            <!--<RelativeLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="3">-->

            <Button
                android:id="@+id/btn_save_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/btn_custom"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/save"
                android:textColor="@android:color/white" />


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>